estilização básica da página principal

--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
         <title>Hedy Lamarr - Atriz e Inventora</title>
 
     </head>
-    <body>
-        
+    <body>   
         <main>
-            <img src="assets/imagens/colagem_hedy_lamarr_1.png" alt="colagem com a foto da hedy lamarr jovem, ela era uma mulher branca, de cabelos pretos na altura dos ombros, na colagem há elementos que remetem à estrelas e ao wifi">
+            <img class="colagem_hedy" src="assets/imagens/colagem_hedy_lamarr_1.png" alt="colagem com a foto da hedy lamarr jovem, ela era uma mulher branca, de cabelos pretos na altura dos ombros, na colagem há elementos que remetem à estrelas e ao wifi">
             <div class="text_block">
-                <h2>conheça</h2>
+                <h3>conheça</h3>
                 <h1>hedy lamarr</h1>
-                <h2>atriz de hollywood e inventora da tecnologia base do wi-fi</h2>
+                <h2>atriz de hollywood e inventora<br>da tecnologia base do wi-fi</h2>
             </div>
         
         </main>
