ajustes organização dos arquivos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Naiane Miranda">
         <meta name="description" content="Site de apresentação da atriz e inventora Hedy Lamarr, desenvolvido como projeto de conclusão do curso de programação web para iniciantes da womakersCode">
 
-        <link rel="stylesheet" href="assets/style.css">
+        <link rel="stylesheet" href="assets/scripts/style.css">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         
         <title>Hedy Lamarr - Atriz e Inventora</title>
