--- a/assets/paginas/filmografia.html
+++ b/assets/paginas/filmografia.html
@@ -36,40 +36,50 @@
     </header>
     <main>
         <section>
-                <div class="caixa">
+                <div class="caixa filmes">
                     <div class="text_block--pg">
                         <h2>hedy lamarr</h2>
                         <h1>filmografia</h1>
                         <p>
                             A estreia notável de Hedy Lamarr ocorreu em "Ecstasy" (1933), qando ela tinha apenas 19 anos, o filme gerou controvérsias pela ousadia de suas cenas - e a fez ficar conhecida como a primeira mulher a simular um orgasmo no cinema.
                             <br><br>
-                            Apesar das indicações históricas de que a atriz não se sentiu confortável com a estreia do filme, devido às cenas de nudez e exposição íntima, incomum na época, esse momento inicial não apenas consolidou sua reputação como atriz, mas também sinalizou a disposição de Lamarr em desafiar as normas estabelecidas.
+                            Apesar das indicações históricas de que a atriz não se sentiu confortável com a estreia do filme, devido à exposição íntima, incomum na época, esse momento inicial a destacou como atriz.
                             <br><br>
-                            Em 1937, fugindo dos abusos de seu primeiro casamento com Mandl, Lamarr mudou-se para Hollywood, atitude que marcou o início de uma carreira cinematográfica de destaque. Com filmes como "Algiers" (1938), ela rapidamente se tornou uma estrela reconhecida internacionalmente, aclamada por sua beleza e talento.
+                            Em 1937, fugindo dos abusos de seu primeiro casamento com Mandl, Lamarr mudou-se para Hollywood, atitude que marcou o reconhecimento internacional de sua carreira cinematográfica.
                             <br><br>No entanto, a beleza de Lamarr não era apenas superficial, <strong>sua mente inquisitiva e visão inovadora transcenderiam as expectativas da indústria cinematográfica</strong>.
                         </p>
                     </div>
                     <div class="galeria_filmes">
                         <h2>filmes de destaque</h2>
+                        <button style="margin: 0;" class="button_back--f controls" aria-label="voltar">
+                            <svg style="transform: rotateY(180deg);" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 22v-20l18 10-18 10z"/></svg>
+                        </button>
+                        <button style="margin: 0;" class="button_next--f controls" aria-label="avançar">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 22v-20l18 10-18 10z"/></svg>
+                        </button>
                         <div class="container">
-                            <button style="margin: 0;" class="button_back" aria-label="voltar">
-                                <svg style="width: max(12px,1vw); transform: rotateY(180deg);" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 22v-20l18 10-18 10z"/></svg>
-                            </button>
-                            <button style="margin: 0;" class="button_next" aria-label="avançar">
-                                <svg style="width: max(12px,1vw); height: max(12px,1vw);" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 22v-20l18 10-18 10z"/></svg>
-                            </button>
                             <div class="caixa_galeria">
                                 <div class="galeria">
-                                    <img class="img_galeria" src="../imagens/fotos_filmografia/filme_2.png" alt="capa do filme">
-                                    <img class="img_galeria" src="../imagens/fotos_filmografia/filme_3.png" alt="capa do filme">
-                                    <img class="img_galeria imagem_atual" src="../imagens/fotos_filmografia/filme_1.png" alt="capa do filme">
-                                    <img class="img_galeria" src="../imagens/fotos_filmografia/filme_4.png" alt="capa do filme">
-                                    <img class="img_galeria" src="../imagens/fotos_filmografia/filme_5.png" alt="capa do filme">
-                                    <img class="img_galeria" src="../imagens/fotos_filmografia/filme_6.png" alt="capa do filme">
-                                    <img class="img_galeria" src="../imagens/fotos_filmografia/filme_7.png" alt="capa do filme">
-                                    <img class="img_galeria" src="../imagens/fotos_filmografia/filme_8.png" alt="capa do filme">
-                                    <img class="img_galeria" src="../imagens/fotos_filmografia/filme_9.png" alt="capa do filme">
-                                    <img class="img_galeria" src="../imagens/fotos_filmografia/filme_10.png" alt="capa do filme">
+                                    <div class="filme_galeria filme_atual"><img class="img_galeria" src="../imagens/fotos_filmografia/filme_1.png" alt=""><p><strong>Geld auf der Straße (1930)</strong><br><br>Em um de seus primeiros papéis, Lamarr atuou nessa comédia alemã.</p></div>
+
+                                    <div class="filme_galeria"><img class="img_galeria" src="../imagens/fotos_filmografia/filme_2.png" alt="capa do filme"><p><strong>Die Koffer des Herrn O.F. (1931)</strong><br><br>Hedy Lamarr aparece nesse filme austríaco como uma atriz coadjuvante.</p></div>
+
+                                    <div class="filme_galeria"><img class="img_galeria" src="../imagens/fotos_filmografia/filme_3.png" alt="capa do filme"><p><strong>Ecstasy (Êxtase) (1933)</strong><br><br>Sinopse: Neste filme, Lamarr protagoniza a história de uma mulher infeliz em seu casamento.</p></div>
+
+                                    <div class="filme_galeria"><img class="img_galeria imagem_atual" src="../imagens/fotos_filmografia/filme_4.png" alt="capa do filme"><p><strong>Algiers (Argélia) (1938)</strong><br><br>Lamarr brilha como Gaby, uma mulher envolvida em um romance em Argel, capital da Argélia.</p></div>
+
+                                    <div class="filme_galeria"><img class="img_galeria" src="../imagens/fotos_filmografia/filme_5.png" alt="capa do filme"><p><strong>I Take This Woman (Argélia) (1940)</strong><br><br>Protagonista em um drama romântico, retratando uma mulher em fuga de seu passado.</p></div>
+
+                                    <div class="filme_galeria"><img class="img_galeria" src="../imagens/fotos_filmografia/filme_6.png" alt="capa do filme"><p><strong>Comrade X (Companheiro X) (1940)</strong><br><br>Lamarr assume o papel de uma jornalista em uma comédia romântica ambientada na União Soviética.</p></div>
+
+                                    <div class="filme_galeria"><img class="img_galeria" src="../imagens/fotos_filmografia/filme_7.png" alt="capa do filme"><p><strong>Boom Town (Cidade dos Desajustados) (1940)</strong><br><br>Coestrela ao lado de Clark Gable e Spencer Tracy em uma história sobre a indústria do petróleo.</p></div>
+
+                                    <div class="filme_galeria"><img class="img_galeria" src="../imagens/fotos_filmografia/filme_8.png" alt="capa do filme"><p><strong>Ziegfeld Girl (Garota Ziegfeld) (1941)</strong><br><br>Interpreta Sandra, uma das garotas Ziegfeld, e contracena com Judy Garland em meio ao glamour do teatro de revista.</p></div>
+
+                                    <div class="filme_galeria"><img class="img_galeria" src="../imagens/fotos_filmografia/filme_9.png" alt="capa do filme"><p><strong>Tortilla Flat (1942)</strong><br><br>Como Dolores, Lamarr cativa em uma adaptação da obra de John Steinbeck..</p></div>
+
+                                    <div class="filme_galeria"><img class="img_galeria" src="../imagens/fotos_filmografia/filme_10.png" alt="capa do filme"><p><strong>Crossroads (Encontro entre Almas) (1942)</strong><br><br>Protagonista em um drama explorando as complexidades da lei e moralidade.</p></div>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -77,5 +87,6 @@
                 </div>
         </section>
     </main>
+    <script src="../src/index.js"></script>
 </body>
 </html>
